--- a/Data_Engineer/Titanic_Flask/App/templates/datos.html
+++ b/Data_Engineer/Titanic_Flask/App/templates/datos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a la API de Titanic</title>
+    <title>Datos del Titanic</title>
     <style>
         body {
             background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2016/07/titanic.jpg?tf=3840x');
@@ -19,19 +19,48 @@
             background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
             padding: 20px;
             border-radius: 10px;
+            margin: auto;
+            width: 80%;
+            max-width: 600px; /* Para limitar el ancho máximo */
         }
         h1 {
             font-size: 36px;
             margin-bottom: 20px;
         }
+        table {
+            margin: auto;
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background-color: #c9d9ca;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <div class="texto-fondo">
-        <h1>¡Hola, {{ name }}</h1>
-        <p>Aquí tienes los datos de Titanic.</p>
-        <!-- Aquí puede colocar su dataframe proveniente de Flask -->
-        {{ dataframe }}
+        <h1>Datos del Titanic</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Columna 1</th>
+                    <th>Columna 2</th>
+                    <!-- Agrega más encabezados según tus datos -->
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dato 1</td>
+                    <td>Dato 2</td>
+                    <!-- Agrega más filas según tus datos -->
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
